# diploma_todolist

./: .env  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy_on_main.yaml  push_any_except_main.yaml
bot/: admin.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/tg/: client.py  schemas.py
deploy/: docker-compose.yaml
tests/: factories.py
tests/boards/: test_board_create_view.py  test_board_view.py
todolist/: settings.py  urls.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py
